# user-idle-time

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  macos_impl.rs
